--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ div#teachers{
     background-color: rgba(244, 246, 248, 0.499);
     text-align: center;
     align-items: center;
+    display: grid;
+    gap: 10px 20px;
    
  
     
