--- a/style.css
+++ b/style.css
@@ -33,14 +33,14 @@ body{
 div#menu{
     padding-top: 20px;
 }
-button{
+button#header{
   border: 1px solid;
   border-radius: 10px;
   font-family: 'Comfortaa', cursive;
   background-color: rgb(255, 253, 250);
 
 }
-button:hover{
+button#header:hover{
     padding:2px;
     transition: 1000ms;
     background-color: aliceblue;
@@ -63,9 +63,8 @@ div#news{
     border-radius: 10px;
     display: inline-flex;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-
+    
+    
 }
 div#news:hover{
     background-color: #fef3e1;
@@ -150,6 +149,7 @@ div#teachers{
     align-items: center;
     display: grid;
     gap: 10px 20px;
+    
    
  
     
@@ -167,10 +167,9 @@ div#blocksteachers{
     text-align: center;
     align-items: center;
     border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    flex-wrap: wrap;
+   
+   display: grid;
+   flex-wrap: wrap;
     
     
 }
@@ -251,4 +250,50 @@ h2#forpupils{
 h2#aboutschool{
    
     opacity: 1px;
+}
+p#text{
+    background-color: rgba(255, 250, 250, 0);
+    border-radius: 10px;
+ 
+}
+span#history{
+   border-bottom: 1px solid;
+   align-items: center;
+   
+
+}
+
+div#grid{
+    background-color: rgb(253, 243, 231);
+    border: 1px ridge;
+    border-color: black;
+   
+     
+}
+button#next{
+    background-color: rgb(255, 240, 224);
+    border-radius: 10px;
+    border:1px solid;
+    text-align: center;
+    align-items: center;
+    font-family: 'Mulish', sans-serif;
+    font-size: large;
+
+}
+button#next:hover{
+    background-color: rgba(174, 253, 216, 0.625);
+    border-color:rgba(174, 253, 216, 0.625);
+    box-shadow: 10px 10px 10px white;
+    
+}
+div#nextbutton{
+    text-align: right;
+    padding: 10px;
+    font-family: monospace;
+}
+button#newsbuttons{
+  border: 1px solid;
+  border-radius: 10px;
+  font-family: 'Comfortaa', cursive;
+  background-color: rgb(255, 253, 250);
 }
