--- a/style.css
+++ b/style.css
@@ -297,3 +297,12 @@ button#newsbuttons{
   font-family: 'Comfortaa', cursive;
   background-color: rgb(255, 253, 250);
 }
+div#github{
+    text-align: center;
+    height: 30px;
+}
+img#github{
+    height: 20px;
+    width: 20px;
+    padding-left: 10px; 
+}
