--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
 div#menu{
     padding-top: 20px;
 }
+
 button#header{
   border: 1px solid;
   border-radius: 10px;
@@ -305,4 +306,7 @@ img#github{
     height: 20px;
     width: 20px;
     padding-left: 10px; 
+}
+div#wrapper{
+    padding: 10px;
 }
