--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header{
     border-bottom: 1px solid;
     box-shadow: 20px 20px 20px white;
     
+    
 
 }
 
@@ -17,6 +18,7 @@ img#logo{
     width: 97px;
     height: 100px;
     padding: 10px;
+    display: flex;
 }
 
 /* name of the site + applies to all h1, on all pages that use style.css */
@@ -38,6 +40,7 @@ body{
 
 div#menu{
     padding-top: 20px;
+    
 }
 /* style for menu buttons on header */
 
@@ -126,6 +129,7 @@ footer{
     font-family: 'Mulish', sans-serif;
     margin-top: 20px;
     padding-left: 10px;
+    text-align: center;
    
 }
 
@@ -351,6 +355,28 @@ p#specialization{
     flex-wrap: wrap;
     display: flex;
     padding: 20px;
+    text-align: center;
 
     
+}
+div#maingrid{
+    text-align: center;
+    align-items: center;
+}
+img#footer:hover{
+   background-color: #ffd5ca92;
+    align-items: center;
+    border-radius: 100px;
+    transition: 1000ms;
+    color: aqua;
+ 
+}
+div#map{
+   flex-wrap: wrap;
+   padding: 20px;
+   padding-left: 200px;
+}
+p#development{
+    padding: 10px;
+    border: 1px solid;
 }
